YouTube playlist in Blog Posts feature
with ViewComponents

--- a/soverance.com/soverance.com.csproj
+++ b/soverance.com/soverance.com.csproj
@@ -31,6 +31,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="System.Web">
+      <HintPath>C:\Windows\Microsoft.NET\Framework\v4.0.30319\System.Web.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.Extensions">
       <HintPath>C:\Windows\Microsoft.NET\Framework\v4.0.30319\System.Web.Extensions.dll</HintPath>
     </Reference>
